log
Fri, Mar 21, 2025  9:09:34 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 10:00:44 PM: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:47:21: error: initialization of 'int *' from 'int' makes pointer from integer without a cast [-Werror=int-conversion]
   47 |       int* numero = k;
      |                     ^
exercises.c:48:17: error: 'l' undeclared (first use in this function)
   48 |       pushFront(l, numero);
      |                 ^
exercises.c:48:17: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
7049a07
